--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ PORT=                   # example: 8000
 HOST=                   # example: 0.0.0.0
 CONFIG_CENTER_ENABLED=  # example: false
 SRV_NAMESPACE=          # example: service_approval
+LOGGING_LEVEL=          # example: 20
+LOGGING_FORMAT=         # example: json
 
 # Vault configuration
 # contains secret
